# iva-wakeword

./: .gitignore  README.md  pyproject.toml
src/iva_wakeword/: __init__.py
src/iva_wakeword/models/: hey_iva.json
training/: TRAINING.md  prep_generalized_okayiva.py  prep_okayiva.py  prep_real_okayiva.py  prep_wakeword.py  record_samples.py  record_wakeword.py  train.sh  training_parameters_generalized_okayiva.yaml  training_parameters_hermes.yaml  training_parameters_iva.yaml  training_parameters_okayiva.yaml  training_parameters_real_okayiva.yaml
wakewords/: hey_hermes.json  hey_hermes.tflite  hey_iva.tflite  okay_iva.json  okay_iva.tflite
